Actions
Bug #5878
closedAdditional lint fixes for sunstudio12.1 and more modern OpenSSL
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Start date:
2015-04-29
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
As part of allowing illumos-gate to be built on OmniOS, additional lint fixes need to be in place.
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 37bbd7cc85ebfd31fbf68569b8b098e5448c9ce9
commit 37bbd7cc85ebfd31fbf68569b8b098e5448c9ce9 Author: Richard Lowe <richlowe@richlowe.net> Date: 2015-05-05T16:02:29.000Z 5878 Additional lint fixes for sunstudio12.1 and more modern OpenSSL Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions