5878 Additional lint fixes for sunstudio12.1 and more modern OpenSSL Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org> Approved by: Gordon Ross <gordon.w.ross@gmail.com>