usr/src/lib/libkmf/plugins/kmf_openssl/Makefile.com
@@ -43,6 +43,11 @@ OPENSSLLIBS64=	$(BERLIB64) -lcrypto -lcryptoutil -lc
 LINTSSLLIBS	= $(BERLIB) -lcrypto -lcryptoutil -lc
 LINTSSLLIBS64	= $(BERLIB64) -lcrypto -lcryptoutil -lc
 
+# Because of varying openssl implementations, we need to not have lint
+# complain if we're being liberal in our suppression directives.
+LINTFLAGS	+=	-erroff=E_SUPPRESSION_DIRECTIVE_UNUSED
+LINTFLAGS64	+=	-erroff=E_SUPPRESSION_DIRECTIVE_UNUSED
+
 SRCDIR=		../common
 INCDIR=		../../include
 
